@@ -43,13 +43,13 @@ use Test::DZil;
     },
     build_requires => {
       'Builder::Bob'  => '9.901',
-      'Module::Build' => '0.3601',
+      'Module::Build' => '0.28',
     },
     test_requires => {
       'Test::Deet'    => '7',
     },
     'configure_requires' => {
-      'Module::Build' => '0.3601',
+      'Module::Build' => '0.28',
     },
   );
 
