@@ -4,6 +4,8 @@ Revision history for {{$dist->name}}
         - the default required version for ExtUtils::MakeMaker in [MakeMaker]
           has been removed
         - load DateTime lazily
+        - the default required version for Module::Build in [ModuleBuild] has
+          been lowered
 
 5.019     2014-05-20 21:11:47-04:00 America/New_York
         - remove a very brief-lived attempt to double-decode
